# ModernCppDX12Renderer

./: .gitignore  CMakeLists.txt
src/: Cleaner.cpp  Cleaner.h  Helpers.h  main.cpp  pch.h
src/Engine/GameObject/: GameObject.cpp  GameObject.ixx
src/Header/: Builder.h  Builder.ixx  Win32.ixx
src/Header/Commands/: CommandSystem.h  CommandSystem.ixx
src/Header/Device/: DeviceManager.h  DeviceManager.ixx
src/Header/Fence/: Fence.h  Fence.ixx
src/Header/Logger/: HOXLogger.h  Logger.h  Logger.ixx
src/Header/Renderer/: Renderer.h  Renderer.ixx
src/Header/ResourceManagement/: Cleaner.h  Cleaner.ixx  Context.h  Context.ixx  DeviceContext.h
src/Header/Swapchain/: Swapchain.h  Swapchain.ixx
src/Header/Window/: HOXWindow.h  Window.h  Window.ixx  WindowBuilder.h  WindowBuilder.ixx
src/Modules/: Types.ixx  Win32.ixx
src/Modules/Camera/: Camera.ixx
src/Modules/Commands/: CommandSystem.ixx
src/Modules/Device/: DeviceManager.ixx
src/Modules/Fence/: Fence.ixx
src/Modules/Input/: InputManager.ixx
src/Modules/Lighting/: LightManager.ixx  LightTypes.ixx
src/Modules/Logger/: Logger.ixx
src/Modules/Memory/: MemoryAllocator.ixx
src/Modules/Mesh/: Mesh.ixx
src/Modules/Renderer/: DescriptorHeap.ixx  Renderer.ixx  Texture.ixx
src/Modules/ResourceManagement/: Context.ixx
src/Modules/Scene/: Model.ixx  ModelLoader.ixx  Scene.ixx  Transform.ixx
src/Modules/Swapchain/: Swapchain.ixx
src/Modules/Window/: Window.ixx
src/Shaders/: PixelShader.hlsl  VertexShader.hlsl
src/Source/: Builder.cpp
src/Source/Camera/: Camera.cpp
src/Source/Commands/: CommandSystem.cpp
src/Source/Device/: DeviceManager.cpp
src/Source/Fence/: Fence.cpp
src/Source/Lighting/: LightManager.cpp
src/Source/Logger/: HOXLogger.cpp  Logger.cpp
src/Source/Memory/: MemoryAllocator.cpp
src/Source/Mesh/: Mesh.cpp
src/Source/Renderer/: DescriptorHeap.cpp  Renderer.cpp  Texture.cpp
src/Source/ResourceManagement/: Cleaner.cpp  Context.cpp  DeviceContext.cpp
src/Source/Scene/: Model.cpp  ModelLoader.cpp
src/Source/Swapchain/: Swapchain.cpp
src/Source/Window/: HOXWindow.cpp  Window.cpp  WindowBuilder.cpp
